added root sqrt botton

--- a/calculator/src/app/app.component.html
+++ b/calculator/src/app/app.component.html
@@ -42,7 +42,9 @@
       <div class="col-sm-12 p-1 m-0">
       <button class="btn btn-lg btn-outline-secondary col-sm-3 p-1" type="button" (click)="pressNumber('.')">.</button>
       <button class="btn btn-lg btn-outline-secondary col-sm-3 p-1" type="button" (click)="pressNumber('0')">0</button>
-      <button class="btn btn-lg btn-success col-sm-6 p-1" type="button" (click)="getAnswer()">=</button>
+      <button class="btn btn-lg btn-success col-sm-3 p-1" type="button" (click)="getAnswer()">=</button>
+      <button class="btn btn-lg btn-secondary col-sm-3 p-1" type="button" (click)="pressOperator('√')">√</button>
+
       </div>
 
     </div>
