--- a/calculator/src/app/app.component.html
+++ b/calculator/src/app/app.component.html
@@ -1,15 +1,16 @@
 <body>
   <div class="container-fluid">
-    <div class="jumbotron col-sm-4 p-2 m-0 bg-inverse">
-      <h1 class="text-center">Angular Calculator</h1>
-
+    <div class="jumbotron col-sm-5 p-3 m-0 bg-inverse">
+      <div class="goku">
+        <h1 style = "position:relative; left:70px; top:2px; ">Angular Calculator</h1>
+      </div>
       <!-- screen -->
-      <div class="input-group input-group-sm col-sm-12 m-0 p-0">
-        <div class="col-sm-12 form-control text-lg-right" type="text" aria-label="Result: ">{{input}}</div>
+      <div class="input-group input-group-sm col-sm-12 m-0 p-0" >
+        <div class="col-sm-12 form-control text-lg-right" type="text"  >{{input}}</div>
       </div>
 
       <div class="input-group input-group-sm col-sm-12 m-0 p-0">
-        <div class="form-control text-sm-right" type="text">{{result}}</div>
+        <div class="form-control text-sm-right" type="text" >{{result}}</div>
       </div>
 
       <div class="col-sm-12 p-1 m-0">
@@ -40,8 +41,8 @@
       </div>
 
       <div class="col-sm-12 p-1 m-0">
-      <button class="btn btn-lg btn-outline-secondary col-sm-3 p-1" type="button" (click)="pressNumber('.')">.</button>
       <button class="btn btn-lg btn-outline-secondary col-sm-3 p-1" type="button" (click)="pressNumber('0')">0</button>
+      <button class="btn btn-lg btn-outline-secondary col-sm-3 p-1" type="button" (click)="pressNumber('.')">.</button>
       <button class="btn btn-lg btn-success col-sm-3 p-1" type="button" (click)="getAnswer()">=</button>
       <button class="btn btn-lg btn-secondary col-sm-3 p-1" type="button" (click)="pressOperator('√')">√</button>
 
