fix dimension of calculator

--- a/calculator/src/app/app.component.html
+++ b/calculator/src/app/app.component.html
@@ -1,6 +1,6 @@
 <body>
   <div class="container-fluid">
-    <div class="jumbotron col-sm-5 p-3 m-0 bg-inverse">
+    <div class="jumbotron col-sm-6 p-4 m-0 bg-inverse">
       <div class="goku">
         <h1 style = "position:relative; left:70px; top:2px; ">Angular Calculator</h1>
       </div>
@@ -23,7 +23,7 @@
       <button class="btn btn-lg btn-outline-secondary col-sm-3 p-1" type="button" (click)="pressNumber('7')">7</button>
       <button class="btn btn-lg btn-outline-secondary col-sm-3 p-1" type="button" (click)="pressNumber('8')">8</button>
       <button class="btn btn-lg btn-outline-secondary col-sm-3 p-1" type="button" (click)="pressNumber('9')">9</button>
-      <button class="btn btn-lg btn-secondary col-sm-3 p-1" type="button" (click)="pressOperator('*')">X</button>
+      <button class="btn btn-lg btn-secondary col-sm-3 p-1" type="button" (click)="pressOperator('*')">x</button>
       </div>
 
       <div class="col-sm-12 p-1 m-0">
